<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.a123.testStation.fragments.ScheduleFragment">

        <EditText
            android:id="@+id/departureStationAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/select_station_from"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="16dp"
            android:importantForAutofill="no"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/arrivalStationAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/select_station_to"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="126dp"
            android:importantForAutofill="no"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/pickerDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/date_picker"
            android:importantForAutofill="no"
            tools:targetApi="o"
            android:inputType="date" />


</LinearLayout>